Add the main html tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Apple</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <header>
+      <nav>
 
+      </nav>
+    </header>
+    <main class="main-content">
+      <article class="">
+
+      </article>
+      <aside class="">
+
+      </aside>
+      <footer></footer>
+    </main>
   </body>
 </html>
